syntax = 'proto3';

package coursePakage;

service CourseService {
    rpc isCourseOpen (Course) returns (BooleanResponse);
}

message Course {
    string infor = 1;
}

message Response {
    string response = 1;
}